--- a/general/setup.qmd
+++ b/general/setup.qmd
@@ -1,52 +1,131 @@
 
+# Setting up the Working Environment {.unnumbered}
+
+Follow the instructions for yuour Operating System and test your installation **prior to the first Lab Session** (Wed, 31st of January). If you experience any issues, write a message on the Ms Teams channel of the module.
+Setting up the Python environment is necessary for:
+
+- Executing the [Jupyter Notebooks](https://docs.jupyter.org/en/latest/) of the Lab sessions of the course.
+- Preparing your own Jupyter Notebooks for the assignments (one each).
+
+We will use `Minconda` to handle our working environment. *Miniconda is a free minimal installer for conda. It is a small bootstrap version of Anaconda that includes only conda, Python, the packages they both depend on, and a small number of other useful packages (like pip, zlib, and a few others)*
+
+## Set up Miniconda (and Python) on Ms Windows {.unnumbered}
+
+### Installation {.unnumbered}
+
+1. Install Miniconda:
+	- *Option 1*: On a UoL Machine: Download and install Miniconda from [here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe). This will install Miniconda and Python in `C:\`. If this process is aborted because it requires administrator rights, press `Start`, select `Install University Applications`, type and choose `Miniconda`.
+	- *Option 2, **Recommended***: Install Miniconda on your personal Laptop: Follow the instructions [here](https://docs.conda.io/projects/miniconda/en/latest/miniconda-install.html).
+2. During the installation, leave the default settings. In particular, when asked whom to "Install Miniconda for", choose "Just for me".
+
+**Important:** If you do choose to work on University Machines you will have to reinstall `Miniconda` every lab session unless you use a PC where Miniconda has been installed already. 
+
+**Alternatively**, you can work on the lab notebooks directly on the web. This does not require to install `Miniconda`. However, it represents a much slower option, especially when setting up the environment. To do so, you can access the data and the lab notebooks in the `\labs` directory from a virtual copy of the course repository [here](https://mybinder.org/v2/gh/GDSL-UL/wma/HEAD). If you opt for this option, you do not need to follow the rest of the instructions below.
+
+### Set up the Directories {.unnumbered}
+
+1. Create a folder where you want to keep your work conducted throughout this course. For example, call it `envs456`. You can save it wherever you want. If you are working on a university machine, it could be worth creating it in `M:/`, which should your "virtual" hard-disk.
+2. Download the [data](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GDSL-UL/wma/tree/main/data) and the [images](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GDSL-UL/wma/tree/main/labs_img) for running and rendering the jupyter notebooks. 
+3. Unzip the folders and move the nested folders into the folder `envs456`.
+4. Create another folder called `labs`
+
+The folder structure should look like:
+
+```
+envs456/
+├── data/
+├── labs_img/
+└── labs/
+```
+
+### Set up the Python Environment {.unnumbered}
+
+1. Type in the search bar and find the `Anaconda Prompt (miniconda 3)`. Launch it. The terminal should appear.
+
+<img src = "../img/windows_anaconda.png" width="80%">
+
+2. Download the `envs456.yml` from GitHub by cliciking `Download raw file`, top right, [here](https://github.com/GDSL-UL/wma/blob/main/envs456.yml) and save in the folder `envs456`.
+3. In the **Anaconda Terminal** write  `conda env create -n envs456 --file C:\envs456\envs456.yml` and press `Enter`; if the file is located elsewhere you'll need to use the corresponding file path.
+4. If you are prompted any questions, press `y`. This process will install all the packages necessary to carry out the lab sessions.
+5. In the **Anaconda Terminal** write `conda activate envs456` and press `Enter`. This activates your working environment.
+6.  *Optional*: Configuration of Jupyter Notebooks
+	- In the **Anaconda Terminal**, write `jupyter server --generate-config` and press enter. This, at least in Windows, should create a file to: `C:\Users\username\.jupyter\jupyter_server_config.py`.
+	- Open the file with a text editor (e.g. [Notepad++](https://notepad-plus-plus.org)), do a  `ctrl-f`  search for:  `c.ServerApp.root_dir`, uncomment it by removing the and change it to  `c.ServerApp.notebook_dir = 'C:\\your\\new\\path`, for example the directory where you created the `envs456` folder. In the University Machines, it is advised to work on the directory `M:\`. 
+	- Save the file and close it.
+	
+<img src = "../img/config.png" width="80%">
+	
+### Start a Lab Session {.unnumbered}
+1. Download the Jupyter Notebook of the session in your folder. Choose one jupyter notebook and click `Dowload raw file` as shown below
+
+<img src = "../img/raw.png" width="80%">
+
+2. Save the file in the `labs` folder within your `envs456` folder on your machine.
+3. Type in the search bar, find and open the `Anaconda Prompt (miniconda 3)`. 
+4. In the **Anaconda Terminal** write and run `conda activate envs456`.
+5. In the **Anaconda Terminal** write and run `jupyter notebook`. This should open Jupyter Notebook in your default browser. 
+
+<img src = "../img/jupyter.png" width="80%">
+
+6. Navigate to your course folder in and double click on the notebook downloaded in step 1. 
+7. You can now work on your copy of the notebook.
+
+
 Follow these instructions and test your installation **prior to the first Lab Session** (Wed, 31st of January). If you experience any issues, write a message on the Ms Teams channel of the module.
 Setting up the Python environment is necessary for:
 
 - Executing the [Jupyter Notebooks](https://docs.jupyter.org/en/latest/) of the Lab sessions of the course.
 - Preparing your own Jupyter Notebooks for the assignments (one each).
 
-# Setting up the Working Environment {.unnumbered}
-
-## Install Miniconda (and Python)
-We will use `Minconda` to handle our working environment. *Miniconda is a free minimal installer for conda. It is a small bootstrap version of Anaconda that includes only conda, Python, the packages they both depend on, and a small number of other useful packages (like pip, zlib, and a few others)*
-
-1. Install Miniconda:
-	- *Option 1*: On a UoL Machine: Download and install Miniconda from [here](https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe). This will install Miniconda and Python in `C:\`. If this process is aborted because it requires administrator rights, press `Start`, select `Install University Applications`, type and choose `Miniconda`.
-	- *Option 2** **Recommended**: Install Miniconda on your personal Laptop: Follow the instructions [here](https://docs.conda.io/projects/miniconda/en/latest/miniconda-install.html), depending on your OS. 
-2. During the installation, leave the default settings. In particular, when asked whom to "Install Miniconda for", choose "Just for me".
-
-**Important:** If you do choose to work on University Machines you will have to reinstall `Miniconda` every lab session unless you use a PC where Miniconda has been installed already. 
-
-**Alternatively**, you can work on the lab notebooks directly on the web. This does not require to install `Miniconda`. However, it represents a much slower option, especially when setting up the environment. To do so, you can access the data and the lab notebooks in the `\labs` directory from a virtual copy of the course repository [here](https://mybinder.org/v2/gh/GDSL-UL/wma/HEAD). If you opt for this session, you do not need to follow the rest of the instructions below.
-
-## Set up the Miniconda Environment
-1. Type in the search bar and find the `Anaconda Prompt (miniconda 3)`. Launch it, and write `conda update`.
-2. Download the [environment.yml](https://github.com/GDSL-UL/wma/blob/main/envs456.yml) whenever it's handy for you, write  `conda env create -n envs456 --file envs456.yml` in the prompt and press `Enter`; unless the `envs456.yml` file is located in the main directory that you see in the prompt, e.g. `C:\`, you need to specify the full directory of the file (including the file name).
-3. If you are prompted any questions, press `y`. This process will install all the packages necessary to carry out the lab sessions.
-
-## Set up the Directories
-
-1. Create a folder where you want to keep your work conducted throughout this course. For example, call it `ENVS456`. You can save it wherever you want. If you are working on a university machine, it could be worth creating it in `M:/`, which should your "virtual" hard-disk.
-2. In `Miniconda` write `conda activate envs456` and press `Enter`. This activates your working environment.
-3. Afterwards, run `jupyter server --generate-config` in `Miniconda`. This, at least in Windows, should create a file to: `C:\Users\username\.jupyter\jupyter_server_config.py`.
-4. Open the file with a text editor (e.g. [Notepad++](https://notepad-plus-plus.org)), do a  `ctrl-f`  search for:  `c.ServerApp.root_dir`, uncomment it by removing the and change it to  `c.ServerApp.notebook_dir = 'C:\\your\\new\\path`, for example the directory where you created the `webmapping` folder. In the University Machines, it is advised to work on the directory `M:\`. 
-5. Save the file and close it.
-
-## Prepare the Lab Data
-1. Download the [data](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GDSL-UL/wma/tree/main/data) and the [images](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GDSL-UL/wma/tree/main/img) for running and rendering the jupyter notebooks. 
-2. Unzip the folders and move the nested folders into the folder `webmapping`.
-
-## Start a Lab Session
-1. Download the Jupyter Notebook of the session in your folder. Choose one jupyter notebook and click "Dowload raw file" as shown below
-
-<img src="../img/raw.png" width="70%">.
- 
-2. Save the file in the `webmapping` folder on your machine, inside another folder called, for example `labs` or `notebooks`. Your `webmapping` folder should at least contain a `data` and a `labs` folder.
-3. Type in the search bar, find and open the `Anaconda Prompt (miniconda 3)`. 
-4. Write and run `conda activate envs456`.
-5. Write and run `jupyter notebook`. This should open Jupyter Notebook in your default browser. Navigate to your course folder and open the notebook downloaded in step 1. 
-6. You can now work on your copy of the notebook.
+## Set up Miniconda (and Python) on MAC {.unnumbered}
 
 
+### Installation {.unnumbered}
 
+To install Miniconda on your personal laptop, Follow the instructions [here](https://docs.conda.io/projects/miniconda/en/latest/miniconda-install.html).
+During the installation, leave the default settings. In particular, when asked whom to "Install Miniconda for", choose "Just for me".
 
+### Set up the Directories {.unnumbered}
+1. Create a folder where you want to keep your work conducted throughout this course. For example, call it `envs456`. You can save it wherever you want. For example, Elisabetta has named her folder `envs456` and it's in her Dropbox in `Users/PIETROST/Library/CloudStorage/Dropbox/envs456`
+2. Download the [data](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GDSL-UL/wma/tree/main/data) and the [images](https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/GDSL-UL/wma/tree/main/labs_img) for running and rendering the jupyter notebooks. 
+3. Unzip the folders and move the nested folders into the folder `envs456`.
+4. Create another folder called `labs`
+
+The folder structure should look like:
+
+```
+envs456/
+├── data/
+├── labs_img/
+└── labs/
+```
+
+<img src = "../img/mac_folder.png" width="80%">
+
+### Set up the Python Environment{.unnumbered}
+
+1. Type in the search bar and open the **Terminal**. 
+2. Download the `envs456.yml` file from GitHub by cliciking `Download raw file` top right, [here](https://github.com/GDSL-UL/wma/blob/main/envs456.yml) and save in the folder `envs456`.
+3. Create a `envs456` folder for the course and place the `.yml` in it. Then, in the **Terminal** write `conda env create -n envs456 --file envs456.yml` and press `Enter`. This will need to be modified according to where you placed the `envs456` folder. For example, Elisabetta has named her folder `envs456` and it's in her Dropbox in `Users/PIETROST/Library/CloudStorage/Dropbox/envs456/envs456.yml`. If you created the `envs456` folder on your desktop, the path would be `Desktop/envs456`.
+
+<img src = "../img/mac_env.png" width="80%">
+
+4. If you are prompted any questions, press `y`. This process will install all the packages necessary to carry out the lab sessions.
+
+### Start a Lab Session {.unnumbered}
+1. Download the Jupyter Notebook of the session in your folder. Choose one jupyter notebook and click `Dowload raw file` as shown below
+
+<img src = "../img/raw.png" width="80%">
+
+2. Save the file in the `labs` folder within your `envs456` folder on your machine.
+3. Type in the search bar, find and open the **Terminal**. 
+4. In the **Terminal** write and run `conda activate envs456`.
+5. In the **Terminal** write and run `jupyter notebook`. 
+
+<img src = "../img/mac_activate.png" width="80%">
+
+6. This should open Jupyter Notebook in your default browser.  You should see something like this:
+
+<img src = "../img/mac_jupyter.png" width="80%">
+
+7. Navigate to your folder. You can now work on your copy of the notebook.
