--- a/labs/w01_intro.ipynb
+++ b/labs/w01_intro.ipynb
@@ -95,7 +95,7 @@
     "3.  What design elements do they rely on?\n",
     "4.  What technology do they use?\n",
     "\n",
-    "#### References\n",
+    "### References\n",
     "\n",
     "-   For an excellent coverage of \"visualisation literacy\", Chapter 11 of Andy Kirk's [\"Data Visualisation\"](https://www.visualisingdata.com/book/) is a great start. Lab: Getting up to speed for web mapping\n",
     "-   A comprehensive overview of computational notebooks and how they relate to modern scientific work is available on [Ch.1 of the GDS book](https://geographicdata.science/book/notebooks/01_geo_thinking.html).\n",
@@ -4962,7 +4962,7 @@
     "<img src=\"../labs_img/simple_features_3_text.svg\" width=\"70%\">\n",
     "\n",
     "* **Point** data: represents a single point in space.\n",
-    "* **Line** data (\"LineString\"): represents a sequence of points that form a line.\n",
+    "* **Line** data (\"LineString\"): represented as a sequence of points that form a line.\n",
     "* **Polygon** data: represents a filled area.\n",
     "\n",
     "And each of them can also be combined in multi-part geometries (See https://shapely.readthedocs.io/en/stable/manual.html#geometric-objects for extensive overview)."
@@ -5518,7 +5518,7 @@
     "\n",
     "**Excercise 1**:\n",
     "\n",
-    "We will start with exploring the bicycle station dataset (available as a GeoPackage file: `data/paris_bike_stations_mercator.gpkg`)\n",
+    "We will start by exploring the bicycle station dataset (available as a GeoPackage file: `data/paris_bike_stations_mercator.gpkg`)\n",
     "    \n",
     "* Read the stations datasets into a GeoDataFrame called `stations`.\n",
     "* Check the type of the returned object\n",
@@ -5636,7 +5636,7 @@
     "\n",
     "**Exercise 3**:\n",
     "\n",
-    "Next, we will explore the dataset on the administrative districts of Paris (available as a GeoJSON file: \"../data/paris_districts_utm.geojson\")\n",
+    "Next, we will explore the dataset on the administrative districts of Paris (available as a GeoJSON file: `../data/paris_districts_utm.geojson`)\n",
     "\n",
     "* Read the dataset into a GeoDataFrame called `districts`.\n",
     "* Check the first rows of the dataframe. What kind of geometries does this dataset contain?\n",
@@ -5687,7 +5687,7 @@
     "\n",
     "* Calculate the area of each district.\n",
     "* Add this area as a new column to the `districts` dataframe.\n",
-    "* Sort the dataframe by this area column for largest to smallest values (descending).\n",
+    "* Sort the dataframe by the area column from largest to smallest values (descending).\n",
     "\n",
     "<details><summary>Hints</summary>\n",
     "\n",
@@ -6036,7 +6036,7 @@
     "\n",
     "**Important:**\n",
     "\n",
-    "All the calculations (e.g. distance, spatial operations, etc.) that happen in `GeoPandas` and `Shapely` assume that your data is in a 2D cartesian plane, and thus the result of those calculations will only be correct if your data is properly projected.\n",
+    "All the calculations (e.g. distance, spatial operations, etc.) that take place in `GeoPandas` and `Shapely` assume that your data is represented in a 2D cartesian plane, and thus the result of those calculations will only be correct if your data is properly projected.\n",
     "\n",
     "</div>"
    ]
@@ -6058,7 +6058,7 @@
    "source": [
     "Going back to the Paris districts dataset, this is now provided as a GeoJSON file (`\"../data/paris_districts.geojson\"`) in geographic coordinates.\n",
     "\n",
-    "For converting to projected coordinates, we will use the standard projected CRS for France is the RGF93 / Lambert-93 reference system, referenced by the `EPSG:2154` number.\n",
+    "For converting the layer to projected coordinates, we will use the standard projected CRS for France is the RGF93 / Lambert-93 reference system, referenced by the `EPSG:2154` number.\n",
     "\n",
     "<div class=\"alert alert-success\">\n",
     "\n",
