--- a/labs/w03_webArch.ipynb
+++ b/labs/w03_webArch.ipynb
@@ -738,7 +738,7 @@
     "\n",
     "**Exercise**:\n",
     "\n",
-    " In pairs, modify the state, vairables and year parameters following the approach adopted above and produce some other simple scatter plots (cloud of points) that suggest correlations between your variables of interest.\n",
+    " In pairs, modify the state, variables and year parameters following the approach adopted above and produce some other simple scatter plots (cloud of points) that suggest correlations between your variables of interest.\n",
     "\n",
     "</div>"
    ]
@@ -754,7 +754,7 @@
     "\n",
     "JSON stands for JavaScript Object Notation. Despite its association with JavaScript, JSON is widely used due to its readability and ease of use by computers, making it the primary format for data transmission through APIs. Most APIs return their responses in JSON format. The `json` library in Python allows you to parse and convert these JSON responses into Python data structures. JSON structures are composed of key-value pairs, similar to Python dictionaries.\n",
     "\n",
-    "In Python, to make an API request and handle the response, you would typically use the the `requests` library. A standard API request involves sending a `GET` request to the server's URL, which specifies the data you wish to retrieve. For instance, to request the locations of all the hire bike stations in London from the **Transport for London** [API](https://api.tfl.gov.uk), you would use the `requests.get()` method. This method requires a URL that directs the request to the appropriate server."
+    "In Python, to make an API request and handle the response, you would typically use the `requests` library. A standard API request involves sending a `GET` request to the server's URL, which specifies the data you wish to retrieve. For instance, to request the locations of all the hire bike stations in London from the **Transport for London** [API](https://api.tfl.gov.uk), you would use the `requests.get()` method. This method requires a URL that directs the request to the appropriate server."
    ]
   },
   {
@@ -799,7 +799,7 @@
     "\n",
     "1. Authentication Key/Token: A user-specific character string appended to a base URL telling the server who is making the query; allows servers to efficiently manage database access.\n",
     "2. Base URL: A link stub that will be at the beginning of all calls to a given API; points the server to the location of an entire database.\n",
-    "3. Search Parameters: A character string appended to a base URL that tells the server what to extract from the database; basically a series of filters used to point to specific parts of a database.\n",
+    "3. Search Parameters: A character string appended to a base URL that tells the server what to extract from the database; basically, a series of filters used to point to specific parts of a database.\n",
     "4. Response Format: A character string indicating how the response should be formatted; usually one of .csv, .json, or .xml."
    ]
   },
@@ -1230,12 +1230,12 @@
     "\n",
     "2.  `GET` requests a representation of a data resource corresponding to a particular `URL`. The process of executing the `GET` method is often referred to as a `GET request` and is the main method used for querying RESTful databases. `HEAD`, `POST`, `PUT`, `DELETE`: other common methods, though mostly never used for database querying.\n",
     "\n",
-    "    Surfing the web is basically equivalent to sending a bunch of `GET` requests to different servers and asking for different files written in `HTML`. Suppose, for instance, I wanted to look something up on Wikipedia. Your first step would be to open your web browser and type in http://www.wikipedia.org. Once you hit return, you would see the page below. Several different processes occured, however, between you hitting \"return\" and the page finally being rendered:\n",
+    "    Surfing the web is basically equivalent to sending a bunch of `GET` requests to different servers and asking for different files written in `HTML`. Suppose, for instance, I wanted to look something up on Wikipedia. Your first step would be to open your web browser and type in http://www.wikipedia.org. Once you hit return, you would see the page below. Several different processes occurred, however, between you hitting \"return\" and the page finally being rendered:\n",
     "\n",
     "    1.  The web browser took the entered character string, used the command-line tool \"Curl\" to write a properly formatted `HTTP GET` request, and submitted it to the server that hosts the Wikipedia homepage.\n",
     "    2.  After receiving this request, the server sent an `HTTP` response, from which `Curl` extracted the HTML code for the page (partially shown below).\n",
     "    3.  The raw `HTML` code was parsed and then executed by the web browser, rendering the page as seen in the window.\n",
-    "    4.  Most APIs requires a key or other user credentials before you can query their database. Getting credentialised with a API requires that you register with the organization. Once you have successfully registered, you will be assigned one or more keys, tokens, or other credentials that must be supplied to the server as part of any API call you make. To make sure users are not  abusing their data access privileges (e.g., by making many rapid queries), each set of keys will be given rate limits governing the total number of calls that can be made over certain intervals of time.\n",
+    "    4.  Most APIs requires a key or other user credentials before you can query their database. Getting credentials for an API requires that you register with the organization. Once you have successfully registered, you will be assigned one or more keys, tokens, or other credentials that must be supplied to the server as part of any API call you make. To make sure users are not  abusing their data access privileges (e.g., by making many rapid queries), each set of keys will be given rate limits governing the total number of calls that can be made over certain intervals of time.\n",
     "\n",
     "3.  Most APIs requires a key before you can query their database. This usually requires you to register with the organization. Most APIs are set up for developers, so you will likely be asked to register an \"application.\" All this really entails is coming up with a name for your app/bot/project and providing your real name, organization, and email. Note that some more popular APIs (e.g., Twitter, Facebook) will require additional information, such as a web address or mobile number. Once you have registered, you will be assigned one or more keys, tokens, or other credentials that must be supplied to the server as part of any API call you make. Most API keys limits the total number of calls that can be made over certain intervals of time. This is so users do not busing their data access privileges."
    ]
