--- a/labs/w04_dataArch.ipynb
+++ b/labs/w04_dataArch.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "1.  Your five favourite spots in Liverpool\n",
     "2.  A polygon of what you consider to be the boundary of the neighbourhood where you live and the city centre of Liverpool. Name each.\n",
-    "3.  A route that captures one of your favorite walks around the Liverpool region\n",
+    "3.  A route that captures one of your favourite walks around the Liverpool region\n",
     "\n",
     "If you are comfortable, upload the files to Microsoft Teams to share them with peers.\n",
     "\n",
@@ -63,7 +63,7 @@
     "\n",
     "### GeoJSON in Python\n",
     "\n",
-    "With the files from the exercise at hand, we will learn how to open them in a Python environment. Then, let's begin by importing the necessary libraries; `geojson`is used for handling GeoJSON files.\n"
+    "With the files from the exercise at hand, we will learn how to open them in a Python environment. Then, let's begin by importing the necessary libraries; `geojson` is used for handling GeoJSON files.\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "id": "b5dede5f",
    "metadata": {},
    "source": [
-    "Now, place the .geojson files you have created in the data folder used in these sessions. As always, the data folder should be stored in the directory where the notebook is running from. For this example, we will assume that the file is called `map.geojson`. We can read the file as:\n"
+    "Now, place the geojson files you have created in the data folder used in these sessions. As always, the data folder should be stored in the directory where the notebook is running from. For this example, we will assume that the file is called `map.geojson`. We can read the file as:\n"
    ]
   },
   {
@@ -281,7 +281,7 @@
     "\n",
     "### Optional: Generating .mbtiles in Python\n",
     "\n",
-    "In Python, you can use `togeojsontiles` to make a dynamic `.mbtiles` files. This is useful to visualize large data appropriately at any zoom level.\n",
+    "In Python, you can use `togeojsontiles` to make dynamic `.mbtiles` files. This is useful to visualize large data appropriately at any zoom level.\n",
     "**This step cannot be ran on University Machines**\n",
     "It requires the installation of `tippecanoe` on your machine. Follow the corresponding instructions for [Windows](https://gist.github.com/ryanbaumann/e5c7d76f6eeb8598e66c5785b677726e) and for [MAC](https://github.com/mapbox/tippecanoe)"
    ]
@@ -403,7 +403,7 @@
    "id": "8140ccb0-0a96-4f88-b810-138b68bdfdb6",
    "metadata": {},
    "source": [
-    "First we need to get the `id` of your Mapbox style by copying its url:\n",
+    "First, we need to get the `id` of your Mapbox style by copying its url:\n",
     "\n",
     "<img src=\"../labs_img/mapbox_styleid.png\" width=\"80%\">"
    ]
